# DeepIterator

./: CMakeLists.txt  DeepContainer.hpp  DeepIterator.hpp  DeepIteratorConfig.cmake  DeepIteratorConfig.cmake.in  DeepView.hpp  FindDeepIterator.cmake  Frame.hpp  Iteratortest.kdev4  Particle.hpp  README.md  Supercell.hpp  View.hpp  deepForeach.hpp  isContainer.hpp  is_iteratorPair.hpp  main.cpp  main.cu  notes.txt
Definitions/: forward.hpp  hdinline.hpp
Doku/: _main.aux  _main.tex  _main.tex.backup  deepiterator.tex  deepiterator.tex.backup  iterator.kilepr  traits.tex  view.tex
Iterator/: Accessor.hpp  Categorie.hpp  Collective.hpp  Concept.hpp  Navigator.hpp  Policies.hpp  Prescription.hpp  RuntimeTuple.hpp  RuntimeVariables.hpp  SliceNavigator.hpp  Storage.hpp  Wrapper.hpp
Iterator/Categorie/: ArrayLike.hpp  DoublyLinkListLike.hpp  SupercellLike.hpp
PIC/: Frame.hpp  Particle.hpp  Supercell.hpp  SupercellContainer.hpp  SupercellContainerManager.hpp  SupercellManager.cu  SupercellManager.hpp
Presi/: 04_07_2018.odp  09_07_2018.odp  12_04_2018.odp  19_10_2017.odp  2017_01_16_Intro.odp  2017_05_04.odp  24_01_2018_Iterator.odp
Presi/Bilder/: Accessor.dia  Datenstruktur_2d.dia  Datenstruktur_2d_Iterator_beschrankt.dia  Datenstruktur_2d_Iterator_beschrankt_2.dia  Datenstruktur_2d_Iterators.dia  Datenstruktur_Einfach.dia  Datenstruktur_View.dia  Datenstruktur_View_Iteration.dia  Datenstruktur_View_Iteration_Beispiel2.dia  Datenstruktur_View_Iteration_Beispiel_Beachte.dia  Distance0.dia  Distance2.dia  Distance4.dia  Distance_base.dia  Ignore2.dia  Ignore4.dia  Jumpsize2.dia  Jumpsize4.dia  Navigator.dia  Offset0.dia  Offset2.dia  Offset4.dia  Offset_jumpsize.dia  Supercells.dia  solution_1.dia  solution_2.dia  solution_3.dia
Test/: .RandomAccess.cpp.kate-swp  Bidirectional.cpp  Cuda.cpp  ExtentNavigator.cpp  Forward.cpp  NdArray.cpp  NestedIterator.cpp  NewContainer.cpp  OwnCategorie.cpp  RandomAccess.cpp  Runtime.cpp  SliceNavigator.cpp  SliceNavigator.hpp  UnnestedIterator.cpp  UnnestetIterator.cpp
Test/Cuda/: cuda.cu  cuda.hpp
Tests/: Bidirectional.cpp  CollectiveOpenMP.cpp  CollectiveOpenMP.cpp1  Cuda.cpp  Forward.cpp  NdArray.cpp  NestedIterator.cpp  NestedIterator.cpp1  NewContainer.cpp  OwnCategorie.cpp  OwnCategorie.hpp  RandomAccess.cpp  Runtime.cpp  Runtime.hpp  SliceNavigator.cpp  SliceNavigator.hpp  UnnestetIterator.cpp  UnnestetIterator.cpp1
Tests/Cuda/: cuda.cu  cuda.hpp
Traits/: Accessing.hpp  Componenttype.hpp  ContainerCategory.hpp  ContainerKind.hpp  HasConstantSize.hpp  HasJumpSize.hpp  HasNbRuntimeElements.hpp  HasOffset.hpp  IndexType.hpp  IsBidirectional.hpp  IsIndexable.hpp  IsRandomAccessable.hpp  MaxElements.hpp  NeedRuntimeSize.hpp  NumberElements.hpp  PreviousElement.hpp  RandomAccessable.hpp  RangeType.hpp  ValueType.hpp  isContainer.hpp  is_iteratorPair.hpp
Traits/Accessor/: Ahead.hpp  Behind.hpp  Equal.hpp  Get.hpp
Traits/Navigator/: AfterLastElement.hpp  BeforeFirstElement.hpp  FirstElement.hpp  LastElement.hpp  NextElement.hpp  PreviousElement.hpp
cmake/: test.cmake
include/: DeepIterator.hpp
include/Iterator/: Iterator.hpp  Prescription.hpp
include/Iterator/Categorie/: ArrayLike.hpp  ArrayNDLike.hpp
include/PIC/: Particle.hpp  Supercell.hpp  SupercellContainer.hpp
include/Traits/: IsRandomAccessable.hpp
include/Traits/Accessor/: Ahead.hpp
include/Traits/Navigator/: FirstElement.hpp  LastElement.hpp  NextElement.hpp  PreviousElement.hpp
include/deepiterator/: DeepIterator.hpp
include/deepiterator/PIC/: Frame.hpp  Particle.hpp  Supercell.hpp  SupercellContainer.hpp  SupercellContainerManager.hpp  SupercellManager.hpp
include/deepiterator/definitions/: NoChild.hpp  SelfValue.hpp  forward.hpp  hdinline.hpp
include/deepiterator/iterator/: Accessor.hpp  Categorie.hpp  ExtentNavigator.hpp  Iterator.hpp  Navigator.hpp  Prescription.hpp  ReverseIterator.hpp  SliceNavigator.hpp  View.hpp
include/deepiterator/iterator/categorie/: ArrayLike.hpp  ArrayNDLike.hpp  DoublyLinkListLike.hpp  SupercellLike.hpp
include/deepiterator/traits/: Componenttype.hpp  ContainerCategory.hpp  HasConstantSize.hpp  IndexType.hpp  IsBidirectional.hpp  IsRandomAccessable.hpp  NumberElements.hpp  RangeType.hpp  Size.hpp  Traits.hpp
include/deepiterator/traits/Accessor/: Ahead.hpp  At.hpp  Behind.hpp  Equal.hpp  Get.hpp
include/deepiterator/traits/Navigator/: AfterLastElement.hpp  BeforeFirstElement.hpp  BeginElement.hpp  EndElement.hpp  FirstElement.hpp  LastElement.hpp  NextElement.hpp  PreviousElement.hpp  REndElement.hpp
